# EDEN

./: .gitignore  404.html  BUG_REPORT_BACKEND_CONNECTION.md  CMakeLists.txt  README.md  REFACTORING_REPORT_2026-01-12.md  index.html  mkdocs.yml  sitemap.xml
backend/: .env.example  biome_classifier.py  biome_editor.py  biome_editor_data.json  biome_mappings.json  fauna_generator.py  glb_texture_optimizer.py  planet_generator.py  requirements.txt  resource_data.py  server.py  species_data_manager.py  xenk_briefing.txt  xenk_context.txt
backend/logs/: chat_history.jsonl
conventions/: index.html
docs/: ANIMATION_RESEARCH.md  EDEN_MULTIPLAYER_PLAN.md  EDEN_OS_PLAN.md  EDEN_Reference.md  IDEAS.md  MODEL_EDITOR_REFACTOR_PLAN.md  MODULAR_CHARACTER_SYSTEM.md  NOTE_TO_SELF.md  conventions.md  getting-started.md  index.md  llm-integration.md
docs/grove/: algobots.md  basics.md  construction.md  economy.md  reference.md
examples/eve/: CMakeLists.txt  ChatInterface.cpp  ChatInterface.hpp  Eve.cpp  Eve.hpp  ParameterLab.cpp  ParameterLab.hpp  ShipInterior.cpp  ShipInterior.hpp  Spaceship.cpp  Spaceship.hpp  XenkTerminal.cpp  XenkTerminal.hpp  eve_personality.json  main.cpp
examples/model_editor/: AnimationMode.cpp  AnimationMode.hpp  CMakeLists.txt  EditableMesh.cpp  EditableMesh.hpp  EditorContext.hpp  ModelingMode.cpp  ModelingMode.cpp.backup  ModelingMode.hpp  ModelingMode_AutoRetopo.cpp  ModelingMode_Gizmo.cpp  ModelingMode_PathTube.cpp  ModelingMode_UV.cpp  main.cpp
examples/spacegame/: CMakeLists.txt  GameConfig.hpp  GameUI.cpp  GameUI.hpp  main.cpp
examples/spinning_triangle/: CMakeLists.txt  main.cpp
examples/terrain_editor/: AIBehaviorSystem.hpp  CMakeLists.txt  FlowSystem.hpp  MCPServer.cpp  MCPServer.hpp  Machine.hpp  MachineHost.hpp  MachineManager.hpp  PortSnapSystem.hpp  ServerManager.hpp  grove_host.cpp  grove_host.hpp  main.cpp
examples/terrain_editor/assets/models/: ai_generated_1771894376.glb  ai_generated_1772151560.glb  ai_generated_1772217357.glb  ai_generated_1772234856.glb  btn_generate.json  ckbx_remove_bg.json  ckbx_texture.json  inp_image.json  log_status.json  mach_hunyuan3d.json  out_model.json  sldr_max_faces.json  sldr_steps.json  test_widget_machine.lime
examples/terrain_editor/assets/models/appliances/: REF1.lime  Top_console_furnace.lime  ref_base.lime  ref_door.lime
examples/terrain_editor/assets/models/building/: 4mPost.lime  Panel_4x4_001.lime  Panel_4x4_Door_001.lime  Panel_4x4_Wall_001.lime  Panel_4x4_ceiling.lime  UnitBeam.lime  Unit_tubular_steel_with_drill_holes.lime  corrugated_metal_001.lime  corrugated_metal_002.lime  posthole.lime  timber6612.lime
examples/terrain_editor/assets/models/characters/: head_half.lime  head_merged.lime  liora_default.lime  torso_full.lime  torso_half.lime  torso_with_cp.lime
examples/terrain_editor/assets/models/const_mat/: half_mason_block.lime  mason_block.lime
examples/terrain_editor/assets/models/containers/: coffee_cup.lime  five_gallon_jug.lime  plastic_1_gallon_blueWhite.lime  plastic_bottle_1.lime  plastic_bottle_2.lime  plastic_bottle_3.lime  plastic_bottle_4.lime  plastic_bottle_5.lime  plastic_bottle_6.lime  plastic_bottle_7.lime  plastic_bottle_8.lime  plastic_bottle_9.lime
examples/terrain_editor/assets/models/electrical/: electric_switch.lime  relay_design_3.lime  relay_pod_design_1.lime  relay_pod_design_2_3.lime  relay_pod_design_3.lime
examples/terrain_editor/assets/models/lighting/: light_fixture.lime  point_light_fixture.lime  spot_light_fixture.lime
examples/terrain_editor/assets/models/machines/: compressor.lime  generator_1.lime  generator_fan.lime  outlet_box.lime
examples/terrain_editor/assets/models/misc/: Cylinder.lime  Cylinder_1.lime  bed.lime  dirt_pile.lime  forge_pad.lime  model_generator_machine_0.lime  output_0.lime  retopo_mesh.lime  rock_1.lime  stake.lime  water_tower.lime  water_tower_scaled.lime
examples/terrain_editor/assets/models/pipes/: end_cap.lime  just_90.lime  just_t.lime  long_pipe_11.lime  straight_white.lime  t_pipe.lime  valve_1.lime
examples/terrain_editor/assets/models/salvage/: salvage_001.lime  salvage_002.lime  trash_1.lime
examples/terrain_editor/assets/models/tools/: rake.lime  shovel.lime  wheelbarrow.lime
examples/terrain_editor/assets/sounds/: generator.opus
examples/terrain_editor/docs/: ARCHITECTURE.md  ENTITY_SYSTEM.md  GROVE_PARADIGM.md  TODO.md
examples/terrain_editor/machines/: CompressorMachine.hpp  GeneratorMachine.hpp  HingeMachine.hpp
examples/terrain_editor/scripts/Xenk/: build_frame_house.grove
examples/terrain_flyover/: CMakeLists.txt  main.cpp
examples/trading_terminal/: CMakeLists.txt  MarketDataClient.cpp  MarketDataClient.hpp  TradingConfig.hpp  main.cpp
examples/trading_terminal/server/: .env.example  algo_engine.py  broker.py  requirements.txt  stock_server.py
examples/trading_terminal/server/strategies/: __init__.py  base.py  bollinger.py  rsi.py  sma_crossover.py
getting-started/: index.html
grove/algobots/: index.html
grove/basics/: index.html
grove/construction/: index.html
grove/economy/: index.html
grove/reference/: index.html
include/eden/: Action.hpp  Animation.hpp  Audio.hpp  Camera.hpp  Core.hpp  Eden.hpp  HomebrewCharacter.hpp  ICharacterController.hpp  Input.hpp  JoltCharacter.hpp  LevelSerializer.hpp  PhysicsWorld.hpp  SkyParameters.hpp  Terrain.hpp
llm-integration/: index.html
modules/ai_companion/: CMakeLists.txt  README.md
modules/ai_companion/backend/: server.py
modules/ai_companion/include/: AICompanionModule.hpp  BeingTypes.hpp  ConversationManager.hpp
modules/ai_companion/src/: AICompanionModule.cpp  ConversationManager.cpp
search/: search_index.json
session/: eden-os.desktop  eden-session.sh
shaders/: model.frag  model_instanced.vert  particle.frag  particle.vert  skybox.frag  skybox.vert  skybox_procedural.frag  skybox_procedural.vert  terrain.frag  terrain.vert  water.frag  water.vert
src/: Camera.cpp  Core.cpp  Noise.hpp  Terrain.cpp
src/AI/: AStarPathfinder.cpp  CullRobot.cpp  (+12 more)
tools/: generate_night_sky.cpp  generate_night_sky.py
(+115 files in other folders)
